@@ -1,15 +1,18 @@
 package com.dinzeer.srelic.registry;
 
+import cn.mmf.slashblade_addon.registry.SBASpecialEffectsRegistry;
 import com.dinzeer.srelic.specialeffects.*;
 import com.dinzeer.srelic.specialeffects.ThePath.*;
 import com.dinzeer.srelic.specialeffects.Lich;
 import com.dinzeer.srelic.specialeffects.MaxBreak;
 import mods.flammpfeil.slashblade.registry.specialeffects.SpecialEffect;
-import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.ItemStack;
+import net.minecraftforge.fml.ModList;
 import net.minecraftforge.registries.DeferredRegister;
 import net.minecraftforge.registries.RegistryObject;
+import com.dinzeer.srelic.specialeffects.superse.*;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static com.dinzeer.srelic.Srelic.MODID;
@@ -54,9 +57,59 @@ public class SRSpecialEffectsRegistry {
     public static final RegistryObject<SpecialEffect> path_of_mystery;//命途·神秘
     public static final RegistryObject<SpecialEffect> path_of_order;//命途·秩序
     public static final RegistryObject<SpecialEffect> path_of_purity;//命途·纯美
+    public static final RegistryObject<SpecialEffect> path_of_healing;//丰饶·慈悲
+
+    public static final RegistryObject<SpecialEffect> VOID_FINALE;//虚无之终末
+    public static final RegistryObject<SpecialEffect> LAMENT_OF_PHANTOMS;//幽魂的哀叹
+
+    public static final RegistryObject<SpecialEffect> CELESTIAL_COLLAPSE;//规则击破
+    public static final RegistryObject<SpecialEffect> BLAZING_HEART_SHIELD;//熔火护心
+    public static final RegistryObject<SpecialEffect> WOLF_SOUL;//北风之魂
+    public static final RegistryObject<SpecialEffect> THUNDERSTORM_SLASH;//电磁风暴
+    public static final RegistryObject<SpecialEffect> SAM_OVERDRIVE;//过载·炽焰形态
+    public static final RegistryObject<SpecialEffect> AQUATIC_SANCTUARY;//圣礼·水仙十字
+    public static final RegistryObject<SpecialEffect> CHAOS_BREAKER;//七雷·雷殛连星
+    public static final RegistryObject<SpecialEffect> RIAN_BOW_SHOOT;//夜魂·元素连射
+    public static final RegistryObject<SpecialEffect> KAFKA_STRINGS;//蛛网·命运提线
+    public static final RegistryObject<SpecialEffect> JINGYUAN_THUNDER;//神策·天霆断空
+    public static final RegistryObject<SpecialEffect> NERO_DEVIL_BREAKER;//魔剑·绯红序曲
+    public static final RegistryObject<SpecialEffect> HERTA_CRYO_STAGE;//「霜星·永冻剧场」
+    public static final RegistryObject<SpecialEffect> WELT_SE;//虚数·时空奇点
+    public static final RegistryObject<SpecialEffect> RAIDEN_SHOGUN;//永恒·雷电将军
+    public static final RegistryObject<SpecialEffect> ETERNAL_FLOW;//千古·洑流潮涌
+    public static final RegistryObject<SpecialEffect> AVENGER_JEANNE;//复仇者·贞德
+    public static final RegistryObject<SpecialEffect> BLOOD_SAKURA;//魂念·血樱寂灭
+    public static final RegistryObject<SpecialEffect> CRIMSON_MOON;//赤月·永夜巡礼
+    public static final RegistryObject<SpecialEffect> INFERNO_BLAZE;//炎狱劫火·天烬
+    public static final RegistryObject<SpecialEffect> DICE_EFFECT;//命运骰子
+    public static final RegistryObject<SpecialEffect> TRUTH_REALM;//终焉律·星之归
+    public static final RegistryObject<SpecialEffect> PERFECT_SANCTUARY;//真我·无瑕护佑
+    public static final RegistryObject<SpecialEffect> FROST_FORGING;//寒气炼成
+    public static final RegistryObject<SpecialEffect> GHOST_THUNDER;//百鬼噬魂·雷劫
+    public static final RegistryObject<SpecialEffect> STAR_THUNDER;//星轨雷殛·天罚
+    public static final RegistryObject<SpecialEffect> FLAME_EROSION;//炎鳞蚀骨·焚烬
+    public static final RegistryObject<SpecialEffect> CRIMSON_ANNIHILATION;//红椿蚀骨·湮烬
+    public static final RegistryObject<SpecialEffect> SAKURA_BLOOM;//樱华·刹那芳华
+    public static final RegistryObject<SpecialEffect> STORM_FURY;//疾风·暴风之怒
+
+
+
 
 
     public SRSpecialEffectsRegistry() {
+
+
+
+
+
+    }
+    public static void SRadd() {
+
+
+        if (ModList.get().isLoaded("slashblade_addon")){
+            PATH_SE_POOL.add(SBASpecialEffectsRegistry.BURST_DRIVE);
+        }
+
     }
     static {
         REGISTRY_KEY2 = DeferredRegister.create(SpecialEffect.REGISTRY_KEY, MODID);
@@ -96,6 +149,39 @@ public class SRSpecialEffectsRegistry {
                 "path_of_order", PathOfOrder::new);
         path_of_purity = REGISTRY_KEY2.register(
                 "path_of_purity", PathOfPurity::new);
+        path_of_healing= REGISTRY_KEY2.register("path_of_healing", PathOfHealing::new);
+        VOID_FINALE = REGISTRY_KEY2.register("void_finale", VoidFinale::new);
+        LAMENT_OF_PHANTOMS = REGISTRY_KEY2.register("lament_of_phantoms", LamentOfPhantoms::new);
+
+        CELESTIAL_COLLAPSE = REGISTRY_KEY2.register("celestial_collapse", CelestialCollapse::new);
+        BLAZING_HEART_SHIELD = REGISTRY_KEY2.register("blazing_heart_shield", BlazingHeartShield::new);
+        WOLF_SOUL = REGISTRY_KEY2.register("wolf_soul", WolfSoul::new);
+        THUNDERSTORM_SLASH = REGISTRY_KEY2.register("thunderstorm_slash", ThunderstormSlash::new);
+        SAM_OVERDRIVE = REGISTRY_KEY2.register("sam_overdrive", SamOverdrive::new);
+        AQUATIC_SANCTUARY = REGISTRY_KEY2.register("aquatic_sanctuary", AquaticSanctuary::new);
+        CHAOS_BREAKER = REGISTRY_KEY2.register("chaos_breaker", ChaosBreaker::new);
+        RIAN_BOW_SHOOT = REGISTRY_KEY2.register("rianbowshoot", RianBowShoot::new);
+        KAFKA_STRINGS = REGISTRY_KEY2.register("kafka_strings", KafkaStrings::new);
+        JINGYUAN_THUNDER = REGISTRY_KEY2.register("jingyuan_thunder", JingyuanThunder::new);
+        NERO_DEVIL_BREAKER = REGISTRY_KEY2.register("nero_devil_breaker", NeroDevilBreaker::new);
+        HERTA_CRYO_STAGE = REGISTRY_KEY2.register("herta_cryo_stage", HertaCryoStage::new);
+        WELT_SE = REGISTRY_KEY2.register("welt_se", WeltSE::new);
+        RAIDEN_SHOGUN = REGISTRY_KEY2.register("raiden_shogun", RaidenShogunSE::new);
+        ETERNAL_FLOW = REGISTRY_KEY2.register("eternal_flow", EternalFlowSE::new);
+        AVENGER_JEANNE = REGISTRY_KEY2.register("avenger_jeanne", AvengerJeanneSE::new);
+        BLOOD_SAKURA = REGISTRY_KEY2.register("blood_sakura", BloodSakuraSE::new);
+        CRIMSON_MOON = REGISTRY_KEY2.register("crimson_moon", CrimsonMoonSE::new);
+        INFERNO_BLAZE = REGISTRY_KEY2.register("inferno_blaze", InfernoBlazeSE::new);
+        DICE_EFFECT = REGISTRY_KEY2.register("dice_effect", DiceEffect::new);
+        TRUTH_REALM = REGISTRY_KEY2.register("truth_realm", TruthRealmSE::new);
+        PERFECT_SANCTUARY = REGISTRY_KEY2.register("perfect_sanctuary", PerfectSanctuarySE::new);
+        FROST_FORGING = REGISTRY_KEY2.register("frost_forging", FrostForgingSE::new);
+        GHOST_THUNDER = REGISTRY_KEY2.register("ghost_thunder", GhostThunderSE::new);
+        STAR_THUNDER = REGISTRY_KEY2.register("star_thunder", StarThunderSE::new);
+        FLAME_EROSION = REGISTRY_KEY2.register("flame_erosion", FlameErosionSE::new);
+        CRIMSON_ANNIHILATION = REGISTRY_KEY2.register("crimson_annihilation", CrimsonAnnihilationSE::new);
+        SAKURA_BLOOM = REGISTRY_KEY2.register("sakura_bloom", SakuraBloomSE::new);
+        STORM_FURY = REGISTRY_KEY2.register("storm_fury", StormFurySE::new);
     }
 
 
@@ -103,8 +189,8 @@ public class SRSpecialEffectsRegistry {
 
 
 
-    //奖池集合
-    public static final List<RegistryObject<SpecialEffect>> PATH_SE_POOL = List.of(
+
+    public static final List<RegistryObject<SpecialEffect>> PATH_SE_POOL = new ArrayList<>(Arrays.asList(
             path_of_destruction,
             path_of_the_hunt,
             path_of_preservation,
@@ -122,6 +208,8 @@ public class SRSpecialEffectsRegistry {
             path_of_trailblaze,
             path_of_mystery,
             path_of_order,
-            path_of_purity
-    );
+            path_of_purity,
+            path_of_healing,
+            DICE_EFFECT
+    ));
 }
